Added Login and Register links that only display when user is logged out.

--- a/DonutShop/DonutShop/Views/Shared/_Layout.cshtml
+++ b/DonutShop/DonutShop/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
         else
         {
             <a href="~/Account/Login">Login</a>
+            <a href="~/Account/Register">Register</a>
         }
     </header>
     <div>
