--- a/DonutShop/DonutShop/Views/Shared/_Layout.cshtml
+++ b/DonutShop/DonutShop/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         @if (SignInManager.IsSignedIn(User))
         {
-            <h5>Are you hungry ?</h5>
+            <h5>Welcome, @User.Claims.First(x => x.Type == "FirstName").Value ! Are you hungry?</h5>
         <form asp-page="/Account/Logout">
             <button type="submit">Logout</button>
         </form>
