--- a/DonutShop/DonutShop/Views/Product/Index.cshtml
+++ b/DonutShop/DonutShop/Views/Product/Index.cshtml
@@ -1,6 +1,18 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model IEnumerable<DonutShop.Models.Donut>
 <h1>Donuts bb</h1>
+
+<div class="row">
+    @foreach (var item in Model)
+    {
+        
+            <div class="container col-4 displayDiv">
+                <img class="productImage" src="@item.ImageUrl" />
+                <h6>@item.Name <span>$@item.Price</span></h6>
+                <form method="get" asp-action="Details">
+                    <input type="hidden" asp-for="@item.ID" />
+                    <button type="submit">Details</button>
+                </form>
+            </div>
+
+    }
+</div>
