final commit for product page for now

--- a/DonutShop/DonutShop/Views/Product/Index.cshtml
+++ b/DonutShop/DonutShop/Views/Product/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<DonutShop.Models.Donut>
-<h1>Donuts bb</h1>
+<h1>Our Donuts</h1>
 
 <div class="row">
     @foreach (var item in Model)
