finished functionality for details page and added basic CSS

--- a/DonutShop/DonutShop/Views/Product/Index.cshtml
+++ b/DonutShop/DonutShop/Views/Product/Index.cshtml
@@ -8,8 +8,8 @@
             <div class="container col-4 displayDiv">
                 <img class="productImage" src="@item.ImageUrl" />
                 <h6>@item.Name <span>$@item.Price</span></h6>
-                <form method="get" asp-action="Details">
-                    <input type="hidden" asp-for="@item.ID" />
+                <form asp-action="Index">
+                    <input type="hidden" asp-for="@Model.FirstOrDefault(x => x.ID == item.ID).ID" />
                     <button type="submit">Details</button>
                 </form>
             </div>
