--- a/DonutShop/DonutShop/wwwroot/css/style.css
+++ b/DonutShop/DonutShop/wwwroot/css/style.css
@@ -38,10 +38,6 @@ nav a:hover {
     display: block;
 }
 
-.displayDiv {
-
-}
-
 .displayDiv h6, .displayDiv p {
     border-radius: 5px;
     background-color:saddlebrown;
@@ -58,4 +54,22 @@ nav a:hover {
     display: block;
     margin: 0 auto 20px auto;
     text-align: center;
+}
+
+.detailsDiv {
+    width: 700px;
+    margin: 0 auto;
+}
+
+.detailsDiv h6 {
+    margin: 20px;
+    line-height: 70px;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
+#detailImage {
+    display: inline-block;
+    float: left;
+    margin: 0 20px 0 0;
 }
