Added style to login and register. Added image carousel to index.

--- a/DonutShop/DonutShop/Pages/Account/Login.cshtml
+++ b/DonutShop/DonutShop/Pages/Account/Login.cshtml
@@ -6,16 +6,23 @@
 
 <h1>Login</h1>
 
-<form method="post">
+<form class="loginForm" method="post">
     <div asp-validation-summary="All"></div>
-    <label asp-for="UserInput.Email"></label>
-    <input asp-for="UserInput.Email" />
-    
-    <label asp-for="UserInput.Password"></label>
-    <input asp-for="UserInput.Password" />
-    
-    <label asp-for="UserInput.RememberMe"></label>
-    <input asp-for="UserInput.RememberMe" />
+
+    <div class="loginDiv">
+    <fieldset class="form-group">
+        <label asp-for="UserInput.Email"></label>
+            <input asp-for="UserInput.Email" />
+    </fieldset>
+    <fieldset class="form-group">
+        <label asp-for="UserInput.Password"></label>
+        <input asp-for="UserInput.Password" />
+    </fieldset>
+    </div>
+    <fieldset class="form-group">
+        <label asp-for="UserInput.RememberMe"></label>
+        <input asp-for="UserInput.RememberMe" />
+    </fieldset>
 
     <button type="submit">Login</button>
 </form>
