--- a/DonutShop/DonutShop/wwwroot/css/style.css
+++ b/DonutShop/DonutShop/wwwroot/css/style.css
@@ -73,3 +73,36 @@ nav a:hover {
     float: left;
     margin: 0 20px 0 0;
 }
+
+.loginForm {
+    background-color: beige;
+    width: 500px;
+    padding: 10px;
+    border: 3px solid saddlebrown;
+    border-radius: 5px;
+    text-align: center;
+    margin: 30px auto;
+}
+
+.registerDiv {
+    width: 350px;
+    margin: 0 auto;
+}
+
+.loginDiv {
+    width: 300px;
+    margin: 0 auto;
+}
+
+.loginDiv label, .registerDiv label {
+    float: left;
+}
+
+.loginDiv input, .registerDiv input {
+    float: right;
+}
+
+#carouselExampleIndicators{
+    width: 400px;
+    margin: 0 auto;
+}
