Added CRUD operations for admin.

--- a/DonutShop/DonutShop/Pages/Admin.cshtml
+++ b/DonutShop/DonutShop/Pages/Admin.cshtml
@@ -5,20 +5,23 @@
 }
 
 <h1>Admin</h1>
-
-<div class="card" style="width: 18rem;">
-    <img src="/assets/images/inventory.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-        <h5 class="card-title">Inventory</h5>
-        <p class="card-text">Manage the C&J Donut Inventory.</p>
-        <a href="#" class="btn btn-primary">Go to Inventory</a>
-    </div>
-</div>
-<div class="card" style="width: 18rem;">
-    <img src="/assets/images/orders.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-        <h5 class="card-title">Orders</h5>
-        <p class="card-text">Check on placed orders.</p>
-        <a href="#" class="btn btn-primary">Go to Orders</a>
+<div class="container">
+    <div class="card-deck">
+        <div class="card" style="width: 18rem;">
+            <img src="/assets/images/inventory.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Inventory</h5>
+                <p class="card-text">Manage the C&J Donut Inventory.</p>
+                <a href="#" class="btn btn-primary">Go to Inventory</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="/assets/images/orders.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Orders</h5>
+                <p class="card-text">Check on placed orders.</p>
+                <a href="#" class="btn btn-primary">Go to Orders</a>
+            </div>
+        </div>
     </div>
 </div>
