--- a/DonutShop/DonutShop/Views/Product/Edit.cshtml
+++ b/DonutShop/DonutShop/Views/Product/Edit.cshtml
@@ -48,5 +48,6 @@
                 <input type="submit" value="Update" class="btn btn-primary" />
             </div>
         </form>
+        <a href="~/product/delete/@Model.ID">Delete this Product</a>
     </div>
 </div>
