--- a/DonutShop/DonutShop/Pages/Admin/Portal.cshtml
+++ b/DonutShop/DonutShop/Pages/Admin/Portal.cshtml
@@ -12,7 +12,7 @@
             <div class="card-body">
                 <h5 class="card-title">Inventory</h5>
                 <p class="card-text">Manage the C&J Donut Inventory.</p>
-                <a href="#" class="btn btn-primary">Go to Inventory</a>
+                <a href="~/admin/inventory" class="btn btn-primary">Go to Inventory</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
