Added mini cart and functionality

--- a/DonutShop/DonutShop/Pages/Product/Details.cshtml
+++ b/DonutShop/DonutShop/Pages/Product/Details.cshtml
@@ -19,3 +19,7 @@
     </form>
 </div>
 
+<div class="clearfix"></div>
+
+@await Component.InvokeAsync("MiniCart", User.Claims.FirstOrDefault(x => x.Type == ClaimValueTypes.Email).Value)
+
