Another commit to make sure items are up to date

--- a/DonutShop/DonutShop/Views/Product/Delete.cshtml
+++ b/DonutShop/DonutShop/Views/Product/Delete.cshtml
@@ -10,6 +10,7 @@
         </form>
         <form method="get" asp-action="Edit">
             <input type="hidden" asp-for="ID" />
+            <input type="hidden" asp-for="ImageName" />
             <button type="submit">Back</button>
         </form>
     </div>
